--- a/style.css
+++ b/style.css
@@ -1,1 +1,116 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;600&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  font-family: "Barlow Condensed", sans-serif;
+  background-color: #ecf2f8;
+  padding: 71px 24px;
+  font-size: 13px;
+  color: #fff;
+  line-height: 13px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  flex-wrap: wrap;
+}
+
+.card {
+  padding: 26px 32px 32px 32px;
+  box-shadow: 40px 60px 50px -47px rgba(72, 85, 106, 0.25);
+  border-radius: 8px;
+  width: 100%;
+}
+
+/* Card backgrounds */
+.violet {
+  background-color: #733fc8;
+  background-image: url(./images/bg-pattern-quotation.svg);
+  background-position: top 0 right 24px;
+  background-repeat: no-repeat;
+}
+
+.grey {
+  background-color: #48556a;
+}
+.white {
+  background-color: #fff;
+  color: #48556a;
+}
+
+.dark {
+  background-color: #19202d;
+}
+
+.author__info {
+  display: flex;
+  align-items: center;
+  gap: 17px;
+}
+
+.user {
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+}
+
+.user.border {
+  border: 2px solid #a775f1;
+}
+
+.white .name {
+  color: #48556a;
+}
+
+.name {
+  font-weight: 500;
+  line-height: 13px;
+  font-size: 13px;
+  color: #fff;
+}
+
+.white .status {
+  color: #48556a;
+}
+
+.status {
+  font-size: 11px;
+  line-height: 11px;
+  margin-top: 4px;
+  color: #fff;
+  opacity: 0.5;
+}
+
+.info {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  margin-top: 18px;
+}
+
+.description {
+  font-weight: 500;
+  line-height: 18px;
+  color: #fff;
+  margin-top: 16px;
+  opacity: 0.7;
+}
+
+.white .description {
+  color: #48556a;
+}
