--- a/style.css
+++ b/style.css
@@ -22,19 +22,16 @@ a {
 }
 
 .main {
-  display: flex;
+  display: grid;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-  flex-wrap: wrap;
+  row-gap: 24px;
+  column-gap: 30px;
 }
 
 .card {
   padding: 26px 32px 32px 32px;
   box-shadow: 40px 60px 50px -47px rgba(72, 85, 106, 0.25);
   border-radius: 8px;
-  width: 100%;
 }
 
 /* Card backgrounds */
@@ -113,4 +110,28 @@ a {
 
 .white .description {
   color: #48556a;
+}
+
+@media (min-width: 1440px) {
+  body {
+    padding: 164px;
+  }
+
+  .main {
+    grid-template-columns: repeat(4, 255px);
+  }
+
+  .violet {
+    background-position: top 0 right 80px;
+    grid-column: 1/3;
+  }
+
+  .dark {
+    grid-column: 2/4;
+  }
+
+  .kira {
+    grid-row: 1/4;
+    grid-column: 4/4;
+  }
 }
