--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
   font-size: 13px;
   color: #fff;
   line-height: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -23,7 +26,6 @@ a {
 
 .main {
   display: grid;
-  flex-direction: column;
   row-gap: 24px;
   column-gap: 30px;
 }
@@ -131,7 +133,7 @@ a {
   }
 
   .kira {
-    grid-row: 1/4;
+    grid-row: 1/3;
     grid-column: 4/4;
   }
 }
